[project]
name = "tunan-paint-bridge-nodes"
version = "1.0.6"
description = "Photoshop and ComfyUI local bridge nodes for TuNan Paint Bridge"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/beiyue0208ly/tunan-paint-bridge-nodes"
Homepage = "https://tunanart.cn"

[tool.comfy]
PublisherId = "beiyue0208ly"
DisplayName = "图南画桥"
requires-comfyui = ">=1.0.0"
includes = ["web"]

