[project]
name = "tunan-paint-bridge-nodes"
version = "1.0.10"
license = { file = "LICENSE" }
description = "ComfyUI bridge nodes for TuNan Paint Bridge. Requires the Photoshop plugin (.ccx)."
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/beiyue0208ly/tunan-paint-bridge-nodes"
Homepage = "https://tunanart.cn"
Documentation = "https://github.com/beiyue0208ly/tunan-paint-bridge-nodes#readme"
"Releases" = "https://github.com/beiyue0208ly/tunan-paint-bridge/releases"
"Photoshop Plugin" = "https://github.com/beiyue0208ly/tunan-paint-bridge/releases"
"Bug Tracker" = "https://github.com/beiyue0208ly/tunan-paint-bridge-nodes/issues"

[tool.comfy]
PublisherId = "beiyue0208ly"
DisplayName = "图南画桥"
Icon = "https://raw.githubusercontent.com/beiyue0208ly/tunan-paint-bridge-nodes/main/assets/node-icon.png"
Banner = "https://raw.githubusercontent.com/beiyue0208ly/tunan-paint-bridge-nodes/main/assets/node-banner.png"
requires-comfyui = ">=0.18.0"
includes = ["web"]
